<resources>
    <string name="app_name">WorkoutPlan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="logo">logo</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="delete_plan">Delete plan</string>
    <string name="add_new_workout_plan">Add new workout plan</string>
    <string name="my_workout_plans">My Workout Plans</string>
    <string name="completed">Completed</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add_day">Add day</string>
    <string name="day_name">Day name</string>
    <string name="plan_name">Plan name</string>
    <string name="exercise_name">Exercise name</string>
    <string name="reps_e_g_3x10">Reps (e.g. 3x10)</string>
    <string name="delete_exercise">Delete exercise</string>
    <string name="add_exercise">Add exercise</string>
    <string name="progress">Progress in days:</string>
    <string name="update_plan">Update Plan</string>
    <string name="edit_day_name">Day name</string>
    <string name="delete_day">Delete day</string>
    <string name="edit_day">Edit day</string>
    <string name="no_plans_created">No plans created</string>
</resources>