<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context=".RegisterActivity">

    <!-- Logo -->

    <!-- Cím -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logopict"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/primary"
        android:text="@string/registration"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <!-- Felhasználónév mező -->

    <!-- Email cím mező -->

    <!-- Jelszó mező -->

    <!-- Jelszó ismétlés mező -->

    <!-- Regisztráció gomb -->

    <!-- Bejelentkezés link -->

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/on_background"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/on_background"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/on_background"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        />

    <EditText
        android:id="@+id/passwordConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/on_background"
        android:textColorHint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/primary"
        android:onClick="registration"
        android:text="@string/register"
        android:textColor="@color/on_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText"
        />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:onClick="navigateToLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>